--- a/apps/pingpong/Makefile
+++ b/apps/pingpong/Makefile
@@ -6,26 +6,24 @@
 ROOTDIR=../..
 DEPSDIR=${ROOTDIR}/deps
 
-ifeq ($(RTE_TARGET),)
-$(error "Please define RTE_TARGET environment variable")
-endif
-
 ifeq ($(UDPDK_PATH),)
 	UDPDK_PATH=${ROOTDIR}
 endif
+
+PKGCONF = pkg-config
 
 # all source are stored in SRCS-y
 SRCS= main.c
 
 LIBS+= -L${UDPDK_PATH}/udpdk -Wl,--whole-archive,-ludpdk,--no-whole-archive
-LIBS+= -L${DEPSDIR}/dpdk/${RTE_TARGET}/lib -Wl,--whole-archive,-ldpdk,--no-whole-archive
-LIBS+= -Wl,--no-whole-archive -lrt -lm -ldl -lcrypto -pthread -lnuma
+LIBS+= $(shell $(PKGCONF) --libs libdpdk)
+LIBS+= -Wl,--no-whole-archive -lrt -lm -ldl -pthread
 
 CFLAGS += $(WERROR_FLAGS) -O3
 
 TARGET="pingpong"
 all:
-	cc -I${ROOTDIR}/udpdk -I${DEPSDIR}/dpdk/${RTE_TARGET}/include -o ${TARGET} ${SRCS} ${LIBS}
+	cc -I${ROOTDIR}/udpdk -o ${TARGET} ${SRCS} ${LIBS}
 
 .PHONY: clean
 clean:
