--- a/config.ini
+++ b/config.ini
@@ -2,13 +2,13 @@
 
 [dpdk]
 
-lcores_primary=2
-lcores_secondary=4
+lcores_primary=1
+lcores_secondary=3
 n_mem_channels=2
 
 [port0]
-mac_addr=68:05:ca:95:f8:ec
-ip_addr=172.31.100.2
+mac_addr=a0:36:9f:0f:bc:9c
+ip_addr=192.168.86.178
 
 [port0_dst]
-mac_addr=68:05:ca:95:fa:64
+mac_addr=00:d8:61:dd:56:cf
